filter box not showing fixed

--- a/src/features/home/ContextSearch/Dashboard/styles.scss
+++ b/src/features/home/ContextSearch/Dashboard/styles.scss
@@ -175,7 +175,6 @@
   -o-transition: width .5s;
   -webkit-transition: width .5s;
   transition: width .5s;
-  overflow: hidden;
   margin-bottom: 1%;
   display: inline-block;
   vertical-align: top;
